# automl-exam-ss25-text-freiburg

./: .gitignore  README.md  pyproject.toml  run.py  run_neps.py
automl/: __init__.py  core.py  datasets.py  models.py
dataset_prep/: SETUP.md  datasetexplore.py  download_datasets.py  download_with_huggingface.py  setup_data.py  test_pipeline.py  verify_data.py
src/: __init__.py  automl.py  datasets.py  utils.py
src/automl/: __init__.py  core.py  datasets.py  init.py
