[project]
name = "automl"
license = { file = "LICENSE" }
# Feel free to change from here
version = "0.1.0"
dependencies = [
  "torchvision",
  "pandas",
  "scikit-learn",
  "numpy<2.0",
  "IPython",
  "pyyaml",
  "datasets>=2.0",     # Force newer datasets version
  "transformers>=4.20", # Force newer transformers
  "neural-pipeline-search",
  "pyarrow>=12.0"      # Force newer pyarrow
]
requires-python = ">=3.12"
authors = [{ name = "user", email = "user@user.com" }]
readme = "README.md"
description = "AutoML SS25 Exam - Text"
classifiers = [
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
  'Programming Language :: Python :: 3',
]