[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl"
version = "0.1.0"
dependencies = [
  "torchvision",
  "pandas",
  "scikit-learn",
  "numpy<2.0",
  "IPython",
  "pyyaml",
  "datasets>=2.0",
  "transformers>=4.20",
  "neural-pipeline-search",
  "pyarrow>=12.0"
]
requires-python = ">=3.12"
authors = [{ name = "user", email = "user@user.com" }]
readme = "README.md"
description = "AutoML SS25 Exam - Text"
license = { text = "BSD-3-Clause" }
classifiers = [
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
  'Programming Language :: Python :: 3',
]

[tool.setuptools.packages.find]
where = ["src"]  # Tell setuptools to look in src/
include = ["automl*"]